# cde-wallpaper

./: Cargo.toml  NOTICE  README.md
assets/wallpapers/: Block.xbm  Block_frame.xbm  Lattice.xbm  Lattice2.xbm  Lattice_frame.xbm  marble.xbm  swirl.xbm
examples/: dbus_test.rs  render_test.rs
src/: assets.rs  config.rs  hyprland.rs  kde.rs  lib.rs  main.rs  renderer.rs
src/gui/: file_list.rs  mod.rs  palette.rs  preview.rs
src/parser/: mod.rs  xbm.rs  xpm.rs
